# scratchcloudclient

./: CMakeLists.txt  LICENSE  README.md
include/scratchcloudclient/: cloudclient.h  cloudevent.h  scratchcloudclient_global.h  signal.h
src/: cloudclient.cpp  cloudclient_p.cpp  cloudclient_p.h  cloudconnection.cpp  cloudconnection.h  cloudevent.cpp  cloudevent_p.cpp  cloudevent_p.h  cloudlogrecord.cpp  cloudlogrecord.h
